--- a/05/Makefile
+++ b/05/Makefile
@@ -10,11 +10,11 @@ LDFLAGS := -fsanitize=address
 UTILS_DIR = ./../utils/
 PROJECT_NAME = serialize
 
-all: test.out
-	./test.out
+all: test
 
-test.out: test.o $(PROJECT_NAME).o
-	$(CC) $^ -o $@ $(CFLAGS) $(LDFLAGS)
+test: test.o $(PROJECT_NAME).o
+	$(CC) $^ -o $@.out $(CFLAGS) $(LDFLAGS)
+	./$@.out
 
 test.o: test.cpp $(PROJECT_NAME).o
 	$(CC) -c $< -o $@ $(CFLAGS) -I$(UTILS_DIR)
@@ -25,10 +25,10 @@ $(PROJECT_NAME).o: $(PROJECT_NAME).cpp $(PROJECT_NAME).h sererr.h
 .PHONY: clean debug release
 
 debug: CFLAGS += -g -O0 -DDEBUG
-debug: test.out
+debug: test
 
 release: CFLAGS += -O3 -DRELEASE
-release: test.out
+release: test
 
 clean:
 	rm -f *.o *.a test.out
