--- a/07/Makefile
+++ b/07/Makefile
@@ -5,15 +5,15 @@ CFLAGS :=  -std=c++20 -W  -Wall      -Werror         -pedantic \
  		   -Wcast-align   -Wpointer-arith -Wformat-security \
  		   -Wformat       -Wwrite-strings -Wcast-align \
  		   -Wunused       -Wcast-qual    -Wmissing-declarations
-LDFLAGS := -fsanitize=address
+# LDFLAGS := -fsanitize=address
 
 UTILS_DIR = ./../utils/
 
-all: test.out
-	./test.out
+all: test
 
-test.out: test.o
-	$(CC) $^ -o $@ $(CFLAGS) $(LDFLAGS)
+test: test.o
+	$(CC) $^ -o $@.out $(CFLAGS) $(LDFLAGS)
+	./$@.out
 
 test.o: test.cpp Vector.h Vector.tcc Allocator.h Iterator.h
 	$(CC) -c $< -o $@ $(CFLAGS) -I$(UTILS_DIR)
@@ -21,10 +21,10 @@ test.o: test.cpp Vector.h Vector.tcc Allocator.h Iterator.h
 .PHONY: clean debug release
 
 debug: CFLAGS += -g -O0 -DDEBUG
-debug: test.out
+debug: test
 
 release: CFLAGS += -O3 -DRELEASE
-release: test.out
+release: test
 
 clean:
 	rm -f *.o *.a test.out
