--- a/08/Makefile
+++ b/08/Makefile
@@ -1,11 +1,10 @@
 #Compiler features
-CC      := g++-10
-CFLAGS :=  -std=c++20 -W  -Wall      -Werror         -pedantic \
+CC      := g++
+CFLAGS :=  -std=c++17 -W  -Wall      -Werror         -pedantic \
  		   -Wextra        -Wfloat-equal   -pedantic-errors \
  		   -Wcast-align   -Wpointer-arith -Wformat-security \
  		   -Wformat       -Wwrite-strings -Wcast-align \
- 		   -Wunused       -Wcast-qual    -Wmissing-declarations \
-		#    -Wfatal-errors
+ 		   -Wunused       -Wcast-qual    -Wmissing-declarations
 LDFLAGS := -fsanitize=address
 
 UTILS_DIR = ./../utils/
