--- a/04/Makefile
+++ b/04/Makefile
@@ -1,10 +1,11 @@
 #Compiler features
-CC      := g++-10
-CFLAGS :=  -std=c++20 -W  -Wall      -Werror         -pedantic \
+CC      := g++
+CFLAGS :=  -std=c++17 -W  -Wall      -Werror         -pedantic \
  		   -Wextra        -Wfloat-equal   -pedantic-errors \
  		   -Wcast-align   -Wpointer-arith -Wformat-security \
  		   -Wformat       -Wwrite-strings -Wcast-align \
- 		   -Wunused       -Wcast-qual    -Wmissing-declarations
+ 		   -Wunused       -Wcast-qual    -Wmissing-declarations \
+		   -Wfatal-errors
 LDFLAGS := -fsanitize=address
 
 UTILS_DIR = ./../utils/
